-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 7.0.1
-
None
-
Ubuntu 20.04 LTS
Built on Qt 6.3.0
The same revision of Creator built Qt 6.2.4 does not crash in this situation
-
03f0997b1e (qt-creator/qt-creator/7.0) 03f0997b1e (qt-creator/qt-creator/master) 03f0997b1e (qt-creator/tqtc-qt-creator/7.0)
qtrob@rob-desktop:~/dev/g++-9.4.0/creator-7.0-6.3.0$ QTC_USE_QPROCESS=1 bin/qtcreator -tcs ConnectionServer error: "QLocalSocket: Remote closed" "/tmp/QtCreator-eJXycJ/ClangBackEnd-66840" Segmentation fault
When additionally passing "-profile", the log ends with:
>initializePlugin Python 439ms ( 0ms) ConnectionServer error: "QLocalSocket: Remote closed" "/tmp/QtCreator-HXowjd/ClangBackEnd-66867" Segmentation fault
- relates to
-
QTBUG-102177 Regression: QProcess::readAllStandardError() crash on assert when MergedChannels is used
-
- Reported
-
-
QTCREATORBUG-27196 Assert in qtcreator_processlauncher (On Windows, and Qt 6.3)
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-27383 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
409874,2 | QtcProcess: Don't read error channel when MergedChannels | 7.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |