QtcProcess: Don't read error channel when MergedChannels

Fixes: QTCREATORBUG-27383
Change-Id: I5034c50fc876c5580148bb7806479da3163b08fc
Reviewed-by: Robert Löhning <robert.loehning@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: hjk <hjk@qt.io>